force-app/main/default/objects/aecm__Geo__c/aecm__Geo__c.object-meta.xml
<CustomObject>
    <description>This object contains geographic segmentations for Purvue.</description>
    <label>Geography</label>
    <nameField>
        <label>Geography</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>