force-app/main/default/objects/aecm__Geo__c/fields/aecm__External_Id__c.field-meta.xml
<CustomField>
    <fullName>aecm__External_Id__c</fullName>
    <description>External Reference Id for the geo.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>