force-app/main/default/objects/aecm__Geo__c/fields/aecm__Parent_Geography__c.field-meta.xml
<CustomField>
    <fullName>aecm__Parent_Geography__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Geo hierarchy lookup.</description>
    <label>Parent Geography</label>
    <referenceTo>aecm__Geo__c</referenceTo>
    <relationshipLabel>Child Geographies</relationshipLabel>
    <relationshipName>Geographies</relationshipName>
    <type>Lookup</type>
</CustomField>