force-app/main/default/objects/aecm__Geo__c/fields/Launchbox_Id__c.field-meta.xml
<CustomField>
    <fullName>Launchbox_Id__c</fullName>
    <description>Created by Appirio on 9/30/2020 for Purvue data migration. This field is safe to delete after the data migration is successfully performed.</description>
    <label>Launchbox Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>