force-app/main/default/objects/aecm__Geo__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Parent_Geography__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>